--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,7 @@ targetCompatibility = 11
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    runtime("com.h2database:h2")
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
