--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,12 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.0.RELEASE")
-    }
+plugins {
+    id "java"
+    id "application"
+    id "org.springframework.boot" version "2.1.0.RELEASE"
+    id "io.spring.dependency-management" version "1.0.6.RELEASE"
 }
 
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
 bootJar {
-    baseName = 'gs-rest-service'
+    baseName = 'cityquest'
     version =  '0.1.0'
 }
 
