--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     runtime("com.h2database:h2")
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile("org.assertj:assertj-core:3.11.1")
 }
