--- a/recommendation/build.gradle
+++ b/recommendation/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id "java"
-    id "org.springframework.boot" version "2.1.0.RELEASE"
+    id "org.springframework.boot" version "2.0.5.RELEASE"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
 }
 
+
 bootJar {
-    baseName = 'cityquest'
+    baseName = 'recommendation'
     version =  '0.1.0'
 }
 
@@ -13,12 +14,13 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    runtime("com.h2database:h2")
+    compile('org.springframework.cloud:spring-cloud-starter-consul-discovery:2.0.1.RELEASE')
+    compile("com.h2database:h2")
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
