Fixed consul with spring boot 2.1

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ local.properties
 
 # User-specific stuff
 .idea/
+*.iml
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
