--- a/game/src/main/resources/application.yml
+++ b/game/src/main/resources/application.yml
@@ -1,13 +1,17 @@
 spring:
   application:
     name: game
-#  cloud:
-#    consul:
-#      host: 193.191.177.44
-#      port: 8500
-#      discovery:
-#        instanceId: ${spring.application.name}:${random.value}
-#        healthCheckPath: /health-check
-#        healthCheckInterval: 20s
+  datasource:
+    url: jdbc:h2:file:/usr/share/cityquest/game-database
+    driver-class-name: org.h2.Driver
+  cloud:
+    consul:
+      host: consul
+      port: 8500
+      discovery:
+        instanceId: ${spring.application.name}:${random.value}
+        healthCheckPath: /health-check
+        healthCheckInterval: 20s
+
 server:
   port: 8080
