--- a/recommendation/src/main/resources/application.yml
+++ b/recommendation/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: recommendation
+  datasource:
+    url: jdbc:h2:file:/usr/share/cityquest/recommendation-database
+    driver-class-name: org.h2.Driver
   cloud:
     consul:
       host: consul
