--- a/game/build.gradle
+++ b/game/build.gradle
@@ -11,6 +11,8 @@ bootJar {
 
 repositories {
     mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
 }
 
 sourceCompatibility = 11
@@ -19,6 +21,7 @@ targetCompatibility = 11
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.springframework.cloud:spring-cloud-starter-consul-discovery:2.1.0.RC2")
     runtime("com.h2database:h2")
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
