--- a/recommendation/build.gradle
+++ b/recommendation/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java"
-    id "org.springframework.boot" version "2.0.5.RELEASE"
+    id "org.springframework.boot" version "2.1.0.RELEASE"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
 }
 
@@ -12,6 +12,8 @@ bootJar {
 
 repositories {
     mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
 }
 
 sourceCompatibility = 1.8
@@ -20,7 +22,7 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
-    compile('org.springframework.cloud:spring-cloud-starter-consul-discovery:2.0.1.RELEASE')
+    compile("org.springframework.cloud:spring-cloud-starter-consul-discovery:2.1.0.RC2")
     compile("com.h2database:h2")
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile("org.springframework.boot:spring-boot-starter-test")
 }
