Use spring actuator for the health check

--- a/recommendation/build.gradle
+++ b/recommendation/build.gradle
@@ -22,6 +22,7 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.cloud:spring-cloud-starter-consul-discovery:2.1.0.RC2")
     compile("com.h2database:h2")
     testCompile("org.springframework.boot:spring-boot-starter-test")
