--- a/game/build.gradle
+++ b/game/build.gradle
@@ -21,6 +21,7 @@ targetCompatibility = 11
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.cloud:spring-cloud-starter-consul-discovery:2.1.0.RC2")
     runtime("com.h2database:h2")
     testCompile('org.springframework.boot:spring-boot-starter-test')
