--- a/recommendation/src/main/resources/application.yml
+++ b/recommendation/src/main/resources/application.yml
@@ -1,16 +1,13 @@
 spring:
   application:
     name: recommendation
-  datasource:
-    url: jdbc:h2:file:/usr/share/cityquest/recommendation-database
-    driver-class-name: org.h2.Driver
   cloud:
     consul:
       host: consul
       port: 8500
       discovery:
         instanceId: ${spring.application.name}:${random.value}
-        healthCheckPath: /health-check
+        healthCheckPath: /health
         healthCheckInterval: 20s
 server:
   port: 8081
