--- a/recommendation/build.gradle
+++ b/recommendation/build.gradle
@@ -2,8 +2,14 @@ plugins {
     id "java"
     id "org.springframework.boot" version "2.1.0.RELEASE"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
+    id 'com.google.cloud.tools.jib' version '0.10.1'
 }
 
+jib {
+    from {
+        image = "openjdk:11-jre-slim"
+    }
+}
 
 bootJar {
     baseName = 'recommendation'
@@ -16,8 +22,8 @@ repositories {
     maven { url "https://repo.spring.io/milestone" }
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
@@ -25,5 +31,6 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.cloud:spring-cloud-starter-consul-discovery:2.1.0.RC2")
     compile("com.h2database:h2")
+    compile project(":shared")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
