Game service does not need to know it's hosted on /api/ now

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - "consul"
     labels:
       traefik.port: 8080
-      traefik.frontend.rule: "PathPrefix:/api/"
+      traefik.frontend.rule: "PathPrefixStrip:/api/"
 
   recommendation:
     image: recommendation:latest
