--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - "consul"
 
   reverse-proxy:
-    image: traefik:1.5
+    image: traefik:1.7.6-alpine
     depends_on:
       - consul
     command:
