--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
+    "classnames": "^2.2.6",
     "formik": "^1.4.1",
     "formik-material-ui": "^0.0.16",
     "leaflet": "^1.3.4",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-leaflet": "^2.1.4",
@@ -20,7 +22,13 @@
     "yup": "^0.26.6"
   },
   "devDependencies": {
+    "eslint": "^5.11.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.12.2",
     "husky": "^1.2.0",
     "prettier": "1.15.2",
     "pretty-quick": "^1.8.0"
@@ -33,13 +41,27 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app",
+    "env": {
+      "browser": true,
+      "jest": true,
+      "es6": true,
+      "node": true
+    },
+    "extends": [
+      "airbnb",
+      "prettier"
+    ],
     "plugins": [
       "prettier"
     ],
     "rules": {
-      "prettier/prettier": "error"
-    }
+      "prettier/prettier": "error",
+      "react/jsx-filename-extension": "disable",
+      "react/prop-types": "disable",
+      "import/prefer-default-export": "disable",
+      "jsx-a11y/label-has-for": "disable"
+    },
+    "parser": "babel-eslint"
   },
   "browserslist": [
     ">0.2%",
