Made tests pass again

--- a/game/build.gradle
+++ b/game/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "java"
+    id "jacoco"
     id "org.springframework.boot" version "2.1.0.RELEASE"
     id "io.spring.dependency-management" version "1.0.6.RELEASE"
     id 'com.google.cloud.tools.jib' version '0.10.1'
@@ -33,4 +34,12 @@ dependencies {
     compile project(":shared")
     runtime("com.h2database:h2")
     testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination file("${buildDir}/jacocoHtml")
+    }
 }
